--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Sheep's Toy</title>
     </head>
     <body>
-        <a href="lastfm-export/index.html"></a>
-        <a href="plscp/index.html"></a>
+        <a href="lastfm-export/index.html">lastfm-export</a>
+        <a href="plscp/index.html">playlist-compare</a>
     </body>
 </html>
