--- a/lastfm-export/index.html
+++ b/lastfm-export/index.html
@@ -53,9 +53,9 @@
                                 hide-details
                             ></v-text-field>
                         </v-card-title>
-                        <v-progress-linear height="25" color="cyan">
+                        <v-progress-linear :value="finishedPages/totalPages*100" height="25" color="cyan">
                             <strong
-                                >{{ Math.ceil(finishedPages/totalPages) }}%
+                                >{{Math.ceil(finishedPages/totalPages*100)}}%
                                 ({{finishedPages}}/{{totalPages}})</strong
                             >
                         </v-progress-linear>
@@ -70,8 +70,8 @@
             </v-app>
         </div>
 
-        <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.js"></script>
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
         <script>
             new Vue({
