--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <body>
         <a href="lastfm-export/index.html">lastfm-export</a>
         <a href="plscp/index.html">playlist-compare</a>
+        <a href="ncmdaily/index.html">ncmdaily</a>
     </body>
 </html>
