--- a/lastfm-export/index.html
+++ b/lastfm-export/index.html
@@ -95,9 +95,9 @@
             let elementA = document.createElement("a");
             elementA.download = this.username + ".csv";
             elementA.style.display = "none";
-            let csvString = "";
+            let csvString = "songName,artist,album,date,loved\n";
             this.trackList.forEach((e) => {
-              csvString += `${e["name"]},${e["artist"]},${e["album"]},${e["date"]},${e["loved"]}`;
+              csvString += `${e["name"]},${e["artist"]},${e["album"]},${e["date"]},${e["loved"]}\n`;
             });
             let blob = new Blob([csvString], {
               type: "text/csv",
