--- a/lastfm-export/index.html
+++ b/lastfm-export/index.html
@@ -91,13 +91,25 @@
           ],
         },
         methods: {
+          CSVStringConverter(s) {
+            if (s.includes("|")) {
+              return '"'.concat(s).concat('"');
+            }
+            return s;
+          },
           export2csv() {
             let elementA = document.createElement("a");
             elementA.download = this.username + ".csv";
             elementA.style.display = "none";
-            let csvString = "songName,artist,album,date,loved\n";
+            let csvString = "songName|artist|album|date|loved\n";
             this.trackList.forEach((e) => {
-              csvString += `${e["name"]},${e["artist"]},${e["album"]},${new Date(e["date"]).valueOf()},${e["loved"]}\n`;
+              csvString += `${this.CSVStringConverter(
+                e["name"]
+              )}|${this.CSVStringConverter(
+                e["artist"]
+              )}|${this.CSVStringConverter(e["album"])}|${new Date(
+                e["date"]
+              ).valueOf()}|${e["loved"]}\n`;
             });
             let blob = new Blob([csvString], {
               type: "text/csv",
@@ -144,7 +156,7 @@
                 name: element["name"],
                 artist: element["artist"]["name"],
                 album: element["album"]["#text"],
-                date: element["date"]["#text"],
+                date: element["date"]["#text"] ? element["date"]["#text"] : "",
                 loved: element["loved"],
               });
             });
