--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Sheep's Toy</title>
   </head>
   <body>
-    <a href="lastfm-export/index.html">lastfm-export</a>
-    <a href="plscp/index.html">playlist-compare</a>
-    <a href="ncmdaily/index.html">ncmdaily</a>
+    <a href="lastfm-export/">lastfm-export</a>
+    <a href="plscp/">playlist-compare</a>
+    <a href="ncmdaily/">ncmdaily</a>
   </body>
 </html>
