--- a/ncmdaily/index.html
+++ b/ncmdaily/index.html
@@ -43,6 +43,7 @@
                   </v-list-item>
                 </v-list> -->
               </v-menu>
+              <div class="mx-4">{{currentDate}}</div>
               <v-spacer></v-spacer>
               <v-text-field
                 v-model="search"
