--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <a href="lastfm-export/">lastfm-export</a>
     <a href="plscp/">playlist-compare</a>
     <a href="ncmdaily/">ncmdaily</a>
+    <a href="dip/">Digital image processing</a>
   </body>
 </html>
