--- a/dip/index.html
+++ b/dip/index.html
@@ -332,7 +332,7 @@
             imageSmoothingEnabled: true,
             canvass: null,
             file: null,
-            imgsrc: "../assets/img.jpg",
+            imgsrc: "../assets/img/img.jpg",
             width: "200",
             height: "267",
             imageData: null,
