--- a/webgl/texture.html
+++ b/webgl/texture.html
@@ -43,7 +43,7 @@ void main() {
 `;
 
     let image = new Image();
-    image.src = "../assets/img.jpg";
+    image.src = "../assets/img/img.jpg";
     image.onload = function () {
         render(image);
     };
