move js libs to assets/lib

--- a/webgl/texture.html
+++ b/webgl/texture.html
@@ -10,7 +10,7 @@
 <div>
   <canvas id="canvas" style="border: 1px solid" width="300" height="300"></canvas>
 </div>
-<script src="./sgl.js"></script>
+<script src="../assets/lib/sgl.js"></script>
 <script>
     "use strict";
 
