--- a/webgl/quadrangle.html
+++ b/webgl/quadrangle.html
@@ -10,7 +10,7 @@
 <div>
   <canvas id="sheep" style="border: 1px solid" width="400px" height="400px" ></canvas>
 </div>
-<script src="./sgl.js"></script>
+<script src="../assets/lib/sgl.js"></script>
 <script>
     "use strict";
 
